--- a/src/index.html
+++ b/src/index.html
@@ -2,36 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-10</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>HTTP requests</title>
   </head>
   <body>
-    <header class="header">
-      <div class="container">
-        <nav class="nav">
-          <a class="nav-logo" href="./index.html" aria-label="Site logo">
-            <svg class="nav-logo-icon" width="100" height="30">
-              <use href="/img/logo.svg"></use>
-            </svg>
-          </a>
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a class="nav-link {=$highlight-act}" href="./1-timer.html">Timer</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link {=$highlight-curr}" href="./2-snackbar.html">Snackbar</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-
-    <main>
-  
-    </main>
-
- 
+    <ul>
+      <li><a href="01-axios.html">Axios</a></li>
+      <li><a href="02-axios-opts.html">Axios-opts</a></li>        
+      <li><a href="03-practice.html">TheCatAPI practice</a></li>
+    </ul>
   </body>
 </html>
