--- a/src/03-practice.html
+++ b/src/03-practice.html
@@ -36,6 +36,6 @@
 
 
   
-    <script src="./js/03-practice.js"></script>
+    <script type="module" src="./js/03-practice.js"></script>
   </body>
 </html>
